[package]
name = "marc_vtab"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marcvtab"
crate-type = ["rlib", "cdylib"]

[dependencies]
marclib = {path = "../marclib" }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.69.4"
